<resources>
    <string name="app_name">Spelling Test</string>
    <string name="add_spelling_words">Add Spelling Words</string>
    <string name="save_words">Save</string>
    <string name="cancel_word_list">Cancel</string>
    <string name="clear_word_list">Clear</string>
    <string name="random_word_list">Choose</string>
    <string name="enter_words_here">Enter words here.</string>
    <string name="spell_word_here">Spell word here.</string>
    <string name="take_spelling_test">Take Spelling Test</string>
    <string name="say">Say</string>
    <string name="cheat">Cheat</string>
    <string name="sentence">Sentence</string>
    <string name="flash_screen_title">CAR CAR APP</string>
    <string name="flash_screen_tag">Zoom zoom</string>
</resources>