<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/testLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_horizontal"
    android:orientation="vertical">

    <!-- TEST SCREEN -->
    <TextView
        android:id="@+id/questionCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textColor="#ffffff"
        android:textSize="16pt" />

    <EditText
        android:id="@+id/answer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:digits="abcdefghijklmnopqrstuvwxyz'"
        android:hint="@string/spell_word_here"
        android:inputType="textNoSuggestions|textVisiblePassword"
        android:textSize="16pt" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal">

        <Button
            android:id="@+id/sayButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:onClick="onSayClick"
            android:text="@string/say" />

        <Button
            android:id="@+id/clearAnswerButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="10sp"
            android:onClick="onClearAnswerClick"
            android:text="@string/clear_word_list" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal">

        <Button
            android:id="@+id/cheatButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:onClick="onCheatClick"
            android:text="@string/cheat" />

        <Button
            android:id="@+id/cancelTestButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="10sp"
            android:onClick="onCancelTestClick"
            android:text="@string/cancel_word_list" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal">

        <Button
            android:id="@+id/sentenceButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:onClick="onSentenceClick"
            android:text="@string/sentence" />

    </LinearLayout>

    <ImageView
        android:id="@+id/talkIcon"
        android:layout_width="50sp"
        android:layout_height="50sp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20sp"
        android:onClick="onSayClick"
        android:src="@drawable/talk_icon" />

</LinearLayout>